# braille-dotmatrix-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release-attestations.yml  tests.yml
docs/: AGENTS_WORKFLOWS.md  AGENT_WORKFLOW_V1_27.md  AGENT_WORKFLOW_V1_28.md  AGENT_WORKFLOW_V1_29.md  AGENT_WORKFLOW_V1_30.md  AGENT_WORKFLOW_V1_31.md  ARCHITECTURE.md  PROJECT_DESIGN.md  QUALITY_CONTROLS.md  RESEARCH.md  RESEARCH_NOTES.md  RESEARCH_V1_21_BRF_FIXTURES.md  RESEARCH_V1_23_JSON_CONTRACTS.md  RESEARCH_V1_24_1_CI_ARTIFACT.md  RESEARCH_V1_26_PROVENANCE.md  RESEARCH_V1_27_REPORT_DIFF_CI.md  RESEARCH_V1_28_BLOCKING_DRIFT_POLICY.md  RESEARCH_V1_30_RELEASE_ATTESTATIONS.md  RESEARCH_V1_31_ATTESTATION_VERIFICATION.md  ROADMAP_V2.md  TACTILE_EXPORT.md  VERSION_PLAN.md  VERSION_PLAN_V1_21.md  VERSION_PLAN_V1_22.md  VERSION_PLAN_V1_23.md  VERSION_PLAN_V1_24_1.md  VERSION_PLAN_V1_25.md  VERSION_PLAN_V1_26.md  VERSION_PLAN_V1_27.md  VERSION_PLAN_V1_29.md  VERSION_PLAN_V1_30.md  VERSION_PLAN_V1_31.md
examples/brf/: README.md  eight_dot_error.txt  valid_six_dot.txt
src/braille_dotmatrix_engine/: __init__.py  artifact_provenance.py  artifacts.py  ascii_backend.py  benchmark.py  braille_enhance.py  braille_quality.py  braille_unicode.py  brf.py  brf_batch.py  cli.py  (+23 more)
tests/: test_api_output_paths.py  test_artifact_provenance.py  test_artifacts_reports.py  test_ascii_backend.py  test_benchmark.py  test_braille_enhance.py  test_braille_quality.py  test_braille_unicode.py  test_brf.py  test_brf_batch.py  test_brf_contract_normalization.py  test_brf_contracts.py  test_brf_examples.py  test_chromatic.py  test_cli.py  test_cli_brf.py  test_cli_validate.py  test_config_validation.py  test_embosser.py  test_error_paths.py  test_geometry.py  test_json_reports.py  test_metrics.py  test_pipeline_artifacts.py  test_preprocess.py  test_raster_vector.py  test_release_attestation.py  test_release_attestation_workflow.py  test_release_verification.py  test_renderers.py  test_report_metrics.py  test_runtime_direct_api.py  test_sampling.py  test_svg_pipeline.py  test_tactile.py  test_tactile_export.py  test_tactile_validation.py  test_validation.py  test_version_constants.py
(+10 files in other folders)
