[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braille-dotmatrix-engine"
version = "1.1.0"
description = "Corrected Unicode Braille dot-matrix art renderer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "opencv-python>=4.8", "Pillow>=10.0", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
braille-dotmatrix = "braille_dotmatrix_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
