[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braille-dotmatrix-engine"
version = "1.14.0"
description = "Unicode Braille and ASCII visual-symbol rendering engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "selinyi123" }]
dependencies = ["numpy>=1.24", "opencv-python>=4.8", "Pillow>=10.0", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
braille-dotmatrix = "braille_dotmatrix_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
